# sales-leads-agent

./: .env  .gitignore  README.md  agent_tasks.py  custom_console.py  google_init.py  main.py  pyproject.toml  requirements.txt  system_prompt.txt
logs/: agent_manager.py  config.yaml  config_manager.py  health_monitor.py
sales_leads_agent.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tools/: web_scaper.py
